[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/ui/GameOver.gd" id="1"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.02, 0.02, 1)

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -140.0
offset_right = 220.0
offset_bottom = 140.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(0.8, 0.15, 0.15, 1)

[node name="Message" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
text = "Your leader has fallen...
The journey ends here."
horizontal_alignment = 1
autowrap_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.7, 0.6, 0.6, 1)

[node name="Buttons" type="HBoxContainer" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 24

[node name="LoadButton" type="Button" parent="Panel/MarginContainer/VBox/Buttons"]
layout_mode = 2
custom_minimum_size = Vector2(140, 40)
text = "Load Save"

[node name="TitleButton" type="Button" parent="Panel/MarginContainer/VBox/Buttons"]
layout_mode = 2
custom_minimum_size = Vector2(140, 40)
text = "Title Screen"

[node name="CreditsButton" type="Button" parent="Panel/MarginContainer/VBox/Buttons"]
layout_mode = 2
custom_minimum_size = Vector2(140, 40)
text = "Credits"
