[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/ui/GameOver.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="bg"]
bg_color = Color(0.04, 0.03, 0.06, 1)

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("bg")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
grow_horizontal = 2
grow_vertical = 2
alignment = 1
theme_override_constants/separation = 24

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 36
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1)

[node name="Subtitle" type="Label" parent="VBox"]
layout_mode = 2
text = "Your party has fallen..."
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)

[node name="RetryBtn" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 48)
text = "Retry Battle"

[node name="TitleBtn" type="Button" parent="VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 48)
text = "Title Screen"

[connection signal="pressed" from="VBox/RetryBtn" to="." method="_on_retry"]
[connection signal="pressed" from="VBox/TitleBtn" to="." method="_on_title"]
